--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:screenOrientation="portrait"
+        android:configChanges="orientation|keyboardHidden"
         android:theme="@style/Theme.GameForCourse">
         <activity
             android:name=".MainActivity"
